# GamePerf-AI

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: arkanoid-report.md  eval-results.csv  eval-results.md  gc-spike-report.md  godot-capture-report.md
examples/arkanoid/: README.md  ball.gd  ball.tscn  brick.gd  brick.tscn  chrome_tracer.gd  game.gd  game.tscn  hud.gd  hud.tscn  paddle.gd  paddle.tscn  powerup.gd  powerup.tscn  project.godot  trace_session.gd
fixtures/lexgap/: lexgap-asset.json  lexgap-asset.truth.json  lexgap-gc.json  lexgap-gc.truth.json  lexgap-shader.json  lexgap-shader.truth.json  lexgap-spawn.json
fixtures/real/: arkanoid-capture.json  arkanoid-capture.truth.json  godot-capture.json
fixtures/synthetic/: gc-spike.json  n2-collision.json  n2-collision.truth.json  physics-burst.json  physics-burst.truth.json  spawn-burst.json  spawn-burst.truth.json  sync-asset-load.json
kb/: README.md  alloc-churn.json  event-storm.json  gc-spike.json  n2-collision.json  physics-burst.json  scene-tree-traversal.json  serialization-stall.json  shader-compile.json  spawn-burst.json  sync-asset-load.json
pipeline/: __init__.py  analyze.py  detect.py  ingest.py  reason.py  retrieve.py  retrieve_embed.py  run.py
tests/: test_analyze.py  test_detect.py  test_eval.py  test_ingest.py  test_real_trace.py  test_retrieve.py  test_retrieve_embed.py  test_run.py  test_smoke.py
tools/: eval.py  make_fixture.py
tools/godot/: README.md  capture.gd  chrome_tracer.gd  hitch_injector.gd  project.godot
