[project]
name = "gameperf-ai"
version = "0.1.0"
description = "AI-assisted diagnosis of CPU frame hitches from game profiler traces"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Aliaksei Kulbitski" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["pipeline"]
